[REFACTOR]: Improve ResponseEntity type safety and stream collection